[package]
name    = "tsptw"
version = "0.1.0"
authors = ["Xavier Gillard <xavier.gillard@uclouvain.be>"]
edition = "2018"

[dependencies]
ddo              = { git = "https://github.com/xgillard/ddo" }
#
structopt        = "0.3.21"
num_cpus         = "1.13.0"
smallbitset      = "0.6.1"

[profile.release]
lto              = true
incremental      = true
panic            = "abort"
